# tigr81

./: README.md
.devcontainer/: README.md  devcontainer.json
.github/workflows/: cicd.yaml
tigr81/: Makefile  README.md  ROADMAP.md  poe_tasks.toml  pyproject.toml
tigr81/tests/: conftest.py  test_main.py
tigr81/tests/commands/core/: conftest.py  test_gitw.py  test_poetry_pm.py
tigr81/tests/commands/hub/: conftest.py  test_helpers.py  test_hub.py  test_models.py
tigr81/tests/utils/: conftest.py  test_create_interactive_prompt.py  test_extract_template_name.py  test_pretty.py  test_read_yaml.py  test_str_enum.py
tigr81/tigr81/: __init__.py  cli_settings.py  main.py
tigr81/tigr81/commands/core/: gitw.py  poetry_pm.py  scaffold.py
tigr81/tigr81/commands/hub/: helpers.py  hub.py  models.py
tigr81/tigr81/commands/monorepo/: constants.py  manifest.py  monorepo.py
tigr81/tigr81/commands/scaffold/: project_template.py  scaffold.py  select_project_type_interactive.py
tigr81/tigr81/resources/hubs/: primereact_examples.yml  tigr81_hub_templates.yml
tigr81/tigr81/utils/: __init__.py  extract_template_name.py  interactive_prompt.py  pretty.py  read_yaml.py  str_enum.py
