[tool.poetry]
name = "tigr81"
version = "1.1.2"
description = ""
authors = ["Giuseppe Ambrosio <giuambro97@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
tigr81 = "tigr81.main:app"

[tool.poetry.dependencies]
python = ">=3.9,<4"
typer = {extras = ["all"], version = "^0.9.0"}
cookiecutter = "^2.4.0"
pydantic = "^2.4.2"
email-validator = "^2.0.0.post2"
pyyaml = "^6.0.1"
graphviz = "^0.20.1"
inquirerpy = "^0.3.4"
copier = "^9.4.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-lazy-fixture = "^0.6.3"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.5.1"
ruff = "^0.7.1"
poethepoet = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
