[project]
name = "tigr81"
version = "1.2.0"
description = ""
authors = [
    {name = "Giuseppe Ambrosio", email = "giuambro97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "typer[all]>=0.9.0,<0.10.0",
    "cookiecutter>=2.4.0,<3.0.0",
    "pydantic>=2.4.2,<3.0.0",
    "email-validator>=2.0.0.post2",
    "pyyaml>=6.0.1,<7.0.0",
    "graphviz>=0.20.1,<0.21.0",
    "inquirerpy>=0.3.4,<0.4.0",
    "copier>=9.4.1,<10.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.2,<8.0.0",
    "pytest-lazy-fixture>=0.6.3,<0.7.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
]
dev = [
    "black>=23.9.1,<24.0.0",
    "mypy>=1.5.1,<2.0.0",
    "ruff>=0.7.1,<0.8.0",
]

[project.scripts]
tigr81 = "tigr81.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
